--- a/Submit.html
+++ b/Submit.html
@@ -41,24 +41,25 @@
 			</div>
 			<div class="info">
 				<p><b>Reference</b><br>
-				   Incredible India<br>
-				   https://www.incredibleindia.org<br>
-				   Phone : New Delhi +91-011 23311237<br>
-				   Email : info.mot@gov.in<br><br>
-				   © Ministry of Tourism, Government of India
+					Incredible India<br>
+					https://www.incredibleindia.org<br>
+					Phone : +91-96377 28184<br>
+					Email : abcdxyz@gmail.com<br><br>
+					© Ministry of Tourism, Government of India
 				</p>
 			</div>
 			<div class="contact">
-				<p><b>- Team 12 -</b>
-				<br><br>
+				<p><b> Team</b>
+					<br><br>
 				<ul>
-				<li>Umesh Manjare 110 </li><br>
-				<li>Vaishnavi Maggidwar 113 </li><br>
-				<li>Yaminee Paratane 115 </li>
+					<li>Vaibhavi Patil </li><br>
+					<li>Priti Jawarkar </li><br>
+					<li>Rachna Mahajan </li>
 				</ul>
+				<br>
+				<b>project guide : </b>Yogita Shah, Prithviraj Nikam
 				</p>
 			</div>
 		</div>
-		
 	</body>
 </html>
